objects/Repair__c.object
<CustomObject>
    <description>Part of Application PRUFTECHNIK Repair</description>
    <fields>
        <fullName>Account__c</fullName>
        <formula>Device__r.sf42_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_booked_in__c</fullName>
        <label>Date booked in</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_send_to_Germany__c</fullName>
        <label>Date send to Germany</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>sf42_Devices__c</referenceTo>
        <relationshipName>Repairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspector_PT_AG_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspector</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Repairs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inspector_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Repairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_AG_Account_Address__c</fullName>
        <formula>Device__r.sf42_Account__r.BillingPostalCode &amp; &quot; &quot; &amp; Device__r.sf42_Account__r.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_Account_Street__c</fullName>
        <formula>Device__r.sf42_Account__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_Account__c</fullName>
        <formula>PT_AG_Agent_Contact_Name__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_Agent_Contact_Email__c</fullName>
        <formula>PT_AG_Agent_Contact_Name__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_Agent_Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Repairs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PT_AG_Contact_Phone__c</fullName>
        <formula>PT_AG_Agent_Contact_Name__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_Customer_Account_Address__c</fullName>
        <formula>PT_AG_Agent_Contact_Name__r.Account.BillingPostalCode &amp; &quot; &quot; &amp;  PT_AG_Agent_Contact_Name__r.Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_Date_received_from_Germany__c</fullName>
        <label>Date received from Germany</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_AG_Date_send_to_customer__c</fullName>
        <label>Date send to customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PT_AG_Decision_Maker__c</fullName>
        <formula>Device__r.sf42_de_Decision_Maker__r.FirstName &amp; &quot; &quot; &amp;  Device__r.sf42_de_Decision_Maker__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Decision Maker</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_Device_Des_Mak_Contact_Phone__c</fullName>
        <formula>Device__r.sf42_de_Decision_Maker__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_User_Account_Street__c</fullName>
        <formula>PT_AG_Agent_Contact_Name__r.Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_AG_desition_maker_Contact_Email__c</fullName>
        <formula>Device__r.sf42_de_Decision_Maker__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Familie__c</fullName>
        <formula>TEXT( Device__r.sf42_de_Product__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Familie</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <formula>Device__r.sf42_Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Nurmber__c</fullName>
        <formula>Device__r.sf42_Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Serial Nurmber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Ask for Authorisation</fullName>
                </value>
                <value>
                    <fullName>Sent to Germany</fullName>
                </value>
                <value>
                    <fullName>Sent Quotation</fullName>
                </value>
                <value>
                    <fullName>Received Customers PO</fullName>
                </value>
                <value>
                    <fullName>Received from Germany</fullName>
                </value>
                <value>
                    <fullName>Send to Customer</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Calibration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>PT Repair</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Device__c</columns>
        <columns>Serial_Nurmber__c</columns>
        <columns>Product_Familie__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Inspector_PT_AG_Contact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>UK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_open</fullName>
        <columns>NAME</columns>
        <columns>Device__c</columns>
        <columns>Serial_Number__c</columns>
        <columns>Product_Familie__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Date_booked_in__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>All Open Repairs</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>UK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Repair Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Repairs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>